tests/snapshots/run_wpt_conformance__onnx_triangular_float32_3x3_tensor_options_diagonal_-1.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "triangular.https.any.js",
    "triangular float32 3x3 tensor options.diagonal=-1",
    "onnx",
    "PASS",
)
