tests/snapshots/run_wpt_conformance__onnx_triangular_float32_non-finite_values_options_diagonal_1.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "triangular.https.any.js",
    "triangular float32 non-finite values options.diagonal=1",
    "onnx",
    "PASS",
)
